# cmake-mam

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DEPENDENCIAS  cmake_install.cmake  graph.in  noimplicit-deps.txt  simplified_graph.in
CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  clean_build_cmakeRulesBuildPhase.makeRelease  common_cmakeRulesBuildPhase.makeMinSizeRel  crypto_download_cmakeRulesBuildPhase.makeRelease  ext_embear_logger_cmakeRulesBuildPhase.makeDebug  ext_embear_logger_cmakeRulesBuildPhase.makeMinSizeRel  ext_embear_logger_cmakeRulesBuildPhase.makeRelWithDebInfo  ext_embear_logger_cmakeRulesBuildPhase.makeRelease  ext_keccak_cmakeRulesBuildPhase.makeDebug  ext_keccak_cmakeRulesBuildPhase.makeMinSizeRel  ext_keccak_cmakeRulesBuildPhase.makeRelWithDebInfo  ext_keccak_cmakeRulesBuildPhase.makeRelease  ext_mbedtls_cmakeRulesBuildPhase.makeDebug  ext_mbedtls_cmakeRulesBuildPhase.makeMinSizeRel  ext_mbedtls_cmakeRulesBuildPhase.makeRelWithDebInfo  ext_mbedtls_cmakeRulesBuildPhase.makeRelease  ext_unity_cmakeRulesBuildPhase.makeDebug  ext_unity_cmakeRulesBuildPhase.makeMinSizeRel  ext_unity_cmakeRulesBuildPhase.makeRelWithDebInfo  ext_unity_cmakeRulesBuildPhase.makeRelease  ext_uthash_cmakeRulesBuildPhase.makeRelWithDebInfo  keccak_download_cmakeRulesBuildPhase.makeMinSizeRel  mbedtls_download_cmakeRulesBuildPhase.makeMinSizeRel  unity_download_cmakeRulesBuildPhase.makeMinSizeRel
cbuild/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cbuild/cclient/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cclient/: CTestTestfile.cmake  cmake_install.cmake
cclient/CMakeScripts/: ext_cjson_cmakeRulesBuildPhase.makeDebug  ext_cjson_cmakeRulesBuildPhase.makeMinSizeRel  ext_cjson_cmakeRulesBuildPhase.makeRelWithDebInfo  ext_cjson_cmakeRulesBuildPhase.makeRelease  ext_http_parser_cmakeRulesBuildPhase.makeDebug  ext_http_parser_cmakeRulesBuildPhase.makeMinSizeRel  ext_http_parser_cmakeRulesBuildPhase.makeRelWithDebInfo  ext_http_parser_cmakeRulesBuildPhase.makeRelease  http_parser_download_cmakeRulesBuildPhase.makeRelWithDebInfo
cclient/api/tests/: cclient_service_init.c
entangled.build/Debug/ZERO_CHECK.build/: Script-F5E22000A4C44F828F682E3F.sh  dgph
entangled.build/Debug/common.build/: Script-4BFB9B9191604C3AACD0EC44.sh
entangled.build/Debug/ext_embear_logger.build/: dgph  (+1 more)
entangled.xcodeproj/: project.pbxproj
mam/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
mam/api/_objs/api/: api.d
mam/api/_objs/trit_t_to_mam_msg_read_context_t_map/: trit_t_to_mam_msg_read_context_t_map.d
mam/api/_objs/trit_t_to_mam_msg_write_context_t_map/: trit_t_to_mam_msg_write_context_t_map.d
mam/entangled.build/Debug/api.build/: dgph  dgph~
mam/entangled.build/Debug/api.build/Objects-normal/x86_64/: api.LinkFileList  api.dia
mam/entangled.build/Debug/send-common.build/: dgph
mam/entangled.build/Debug/send-common.build/Objects-normal/x86_64/: send-common.LinkFileList  send-common.dia
mam/entangled.build/Debug/send-msg.build/Objects-normal/x86_64/: send-msg.LinkFileList
mam/examples/: send-msg  send-msg.runfiles_manifest
mam/examples/_objs/common/: common.d
mam/examples/_objs/send-common/: send-common.d
mam/examples/_objs/send-msg/: send-msg.d
mam/examples/send-msg.runfiles/org_iota_entangled/mam/examples/: send-msg
mam/mam/_objs/channel/: channel.d
mam/mam/_objs/endpoint/: endpoint.d
mam/mam/_objs/mam_channel_t_set/: mam_channel_t_set.d
mam/mam/_objs/mam_endpoint_t_set/: mam_endpoint_t_set.d
mam/mam/_objs/mam_pk_t_set/: mam_pk_t_set.d
mam/mam/_objs/message/: message.d
mam/mss/_objs/mss_traversal/: mss_common.d  mss_traversal.d
mam/ntru/_objs/mam_ntru_pk_t_set/: mam_ntru_pk_t_set.d
mam/ntru/_objs/mam_ntru_sk_t_set/: mam_ntru_sk_t_set.d
mam/ntru/_objs/ntru/: ntru.d
mam/ntru/_objs/poly_no_mred_binary/: poly.d
mam/pb3/_objs/pb3/: pb3.d
mam/prng/_objs/prng/: prng.d
mam/psk/_objs/mam_psk_t_set/: mam_psk_t_set.d
mam/psk/_objs/psk/: psk.d
mam/sponge/_objs/sponge/: sponge.d
mam/sponge/_objs/spongos/: spongos.d
mam/sponge/_objs/spongos_types/: spongos_types.d
mam/trits/_objs/buffers/: buffers.d
mam/trits/_objs/trits/: trits.d
mam/troika/_objs/troika/: troika.d
mam/wots/_objs/wots/: wots.d
(+14 files in other folders)
